[gd_scene load_steps=8 format=3 uid="uid://753dvq3mxgal"]

[ext_resource type="Theme" uid="uid://b0gks4806w8al" path="res://fonts/menus.tres" id="1_hh1xd"]
[ext_resource type="Script" path="res://scenes/menus/components/menu_button.gd" id="2_3q3ls"]
[ext_resource type="AudioStream" uid="uid://c0dn3kt30bt35" path="res://audio/Select 1.wav" id="3_fk15f"]
[ext_resource type="AudioStream" uid="uid://b5c8xk6ax3288" path="res://audio/Confirm 1.wav" id="4_fdw4t"]
[ext_resource type="AudioStream" uid="uid://bdb7prf7cayi8" path="res://audio/Cancel 1.wav" id="5_gkjmw"]
[ext_resource type="AudioStream" uid="uid://d02tfmgypb0wc" path="res://audio/Big Egg collect 1.wav" id="6_qelhl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5kwxt"]

[node name="MenuButton" type="Button"]
visibility_layer = 524288
theme = ExtResource("1_hh1xd")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_5kwxt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5kwxt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5kwxt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5kwxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5kwxt")
text = "SAMPLE TEXT"
script = ExtResource("2_3q3ls")

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_fk15f")

[node name="ConfirmSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fdw4t")

[node name="CancelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gkjmw")

[node name="StartGameSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qelhl")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
